data/derived/sp14/progs/unify/prog1920.ml.out
Characters 101-102:
  else fixpoint (f, aPrime);;
                 ^
Error: This expression has type 'a -> 'a
       but an expression was expected of type 'a -> 'a * bool
       The type variable 'a occurs inside 'a * bool
